:white_check_mark: add unit tests